# papery

./: .gitignore  Cargo.toml  PKGBUILD  README.md  justfile
data/: dev.papery.CosmicApplet-autostart.desktop  dev.papery.CosmicApplet.desktop  dev.papery.CosmicApplet.metainfo.xml
i18n/en/: papery.ftl
src/: app.rs  background.rs  brightness.rs  config.rs  daemon.rs  download.rs  lib.rs  localize.rs  main.rs  scheduler.rs  tray.rs
src/pages/: appearance.rs  history.rs  mod.rs  schedule.rs  sources.rs
src/wallpaper/: bing.rs  earth_view.rs  local.rs  mod.rs  nasa_apod.rs  wallhaven.rs
